# TFM_Multiview_3D_Reconstruction

./: README.md  config.yaml  pyproject.toml  requirements.txt
src/panoptic_reconstruction/: __main__.py  from_txt.py
src/panoptic_reconstruction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/panoptic_reconstruction/DAD_3DHeads_model/: __init__.py  utils.py
src/panoptic_reconstruction/DAD_3DHeads_model/data/: flame_dataset.py  utils.py
src/panoptic_reconstruction/DAD_3DHeads_model/losses/: landmarks_loss_w_visibility.py
src/panoptic_reconstruction/DAD_3DHeads_model/metrics/: iou.py  keypoints.py
src/panoptic_reconstruction/DAD_3DHeads_model/model/: __init__.py  flame.py  flame_regression.py  (+1 more)
src/panoptic_reconstruction/config/: __init__.py  config.yaml  manage_paths.py
src/panoptic_reconstruction/cvsba-1.0.0/: CMakeLists.txt
src/panoptic_reconstruction/face_processor/: __init__.py  face_cropper.py  face_detection.py  face_occlusion.py  face_pose.py
src/panoptic_reconstruction/panoptic_cameras/: __init__.py  manage_cameras.py
src/panoptic_reconstruction/panoptic_points/: __init__.py  panoptic_body_points.py  panoptic_landmarks.py
src/panoptic_reconstruction/prediction/: __init__.py  landmarks_selector_3D.py  scaled_landmarks_processor.py
src/panoptic_reconstruction/reconstruction/: __init__.py  bundle_adjustment.py  linear_reconstruction.py  projection_utils.py  ransac.py  reconstruction_processor.py
src/panoptic_reconstruction/utils/: __init__.py  origin.py  panutils.py  result_saver.py  sequence.py  utils.py
(+362 files in other folders)
