[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panoptic_reconstruction"
version = "0.1.0"
authors = [
    {name = "Esther Vera Moreno", email = "esthervera99@gmail.com"},
]
description = "Multiview 3D reconstruction method that uses DAD_3DNet and integrate RANSAC camera refinement for extracting 3D annotations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/EstherRobotics/TFM_Multiview_3D_Reconstruction"

[project.scripts]
panoptic_reconstruction = "panoptic_reconstruction.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
